use openjpa.EntityManagerFactoryPool=true ensure that em transactions are rolled back and the entity manager is closed in tests.
This is a dramatic speed up over the previous configuration. 

On my air, full drop and build with tests is 5:30, full test without
drop is 3:30

Fuck yea.

--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -1,6 +1,9 @@
 openjpa.ConnectionURL=jdbc:default:connection
 openjpa.ConnectionDriverName=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
-<property name="openjpa.jdbc.DBDictionary" value="postgres(StoreCharsAsNumbers=false)"/>
+openjpa.RuntimeUnenhancedClasses=unsupported
+#openjpa.QueryCache=true
+#openjpa.DataCache=true
+openjpa.EntityManagerFactoryPool=true
 #openjpa.Log=DefaultLevel=TRACE,SQL=TRACE
 #openjpa.jdbc.TransactionIsolation=repeatable-read
