--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -3,5 +3,10 @@ openjpa.ConnectionPassword=${db.password}
 openjpa.ConnectionURL=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 openjpa.ConnectionDriverName=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
+openjpa.RuntimeUnenhancedClasses=unsupported
+#openjpa.QueryCache=true
+#openjpa.DataCache=true
+openjpa.EntityManagerFactoryPool=true
+#openjpa.jdbc.DriverDataSource=dbcp
 #openjpa.jdbc.TransactionIsolation=repeatable-read
 #openjpa.Log=DefaultLevel=INFO,SQL=TRACE
