--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -4,9 +4,11 @@ openjpa.ConnectionURL=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 openjpa.ConnectionDriverName=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
+#openjpa.ConnectionRetainMode=always
 #openjpa.QueryCache=true
 #openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
-#openjpa.jdbc.DriverDataSource=dbcp
+openjpa.ConnectionProperties=initialSize=2,maxTotal=20,maxWaitMillis=1000
+openjpa.jdbc.DriverDataSource=dbcp
 #openjpa.jdbc.TransactionIsolation=repeatable-read
 #openjpa.Log=DefaultLevel=INFO,SQL=TRACE
