--- a/model/pom.xml
+++ b/model/pom.xml
@@ -223,18 +223,21 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.openjpa</groupId>
-                <artifactId>openjpa-maven-plugin</artifactId>
-                <configuration>
-                    <addDefaultConstructor>true</addDefaultConstructor>
-                    <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId> 
                 <executions>
                     <execution>
-                        <id>enhancer</id>
                         <phase>process-classes</phase>
+                        <configuration>
+                            <tasks>
+                                <taskdef name="openjpac" classname="org.apache.openjpa.ant.PCEnhancerTask" classpathref="maven.compile.classpath" />
+                                <openjpac>
+                                    <classpath refid="maven.compile.classpath" />
+                                </openjpac>
+                            </tasks>
+                        </configuration>
                         <goals>
-                            <goal>enhance</goal>
+                            <goal>run</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -295,9 +298,7 @@
                                         <artifactId>
                                             openjpa-maven-plugin
                                         </artifactId>
-                                        <versionRange>
-                                            [2.2.0,)
-                                        </versionRange>
+                                        <versionRange>[2.2.0-SNAPSHOT,)</versionRange>
                                         <goals>
                                             <goal>enhance</goal>
                                         </goals>
@@ -416,6 +417,19 @@
                                         <versionRange>[0.0.2-rc4-SNAPSHOT,)</versionRange>
                                         <goals>
                                             <goal>generate</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-antrun-plugin</artifactId>
+                                        <versionRange>[1.2,)</versionRange>
+                                        <goals>
+                                            <goal>run</goal>
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
