provide access to the data access bundle entity manager factory.
declare openjpa.EntityManagerFactoryPool property in server
configuration, not hardwired into the application.

Change CoREService to CoREApplication to reflect new dropwizard
conventions.

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>service</artifactId>
 
     <properties>
-        <main.class>com.chiralbehaviors.CoRE.CoREService</main.class>
+        <main.class>com.chiralbehaviors.CoRE.CoREApplication</main.class>
     </properties>
 
     <dependencies>
