Better fetching strategy for in db job animations.  Almost having things working with a cache in the JPA in the db.

--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -2,6 +2,8 @@ openjpa.ConnectionURL=jdbc:default:connection
 openjpa.ConnectionDriverName=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
+openjpa.MaxFetchDepth=1
+#openjpa.FetchGroups=job.animation
 #openjpa.QueryCache=true
 #openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
