--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -4,7 +4,7 @@ openjpa.ConnectionURL=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 openjpa.ConnectionDriverName=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
-#openjpa.ConnectionRetainMode=always
+openjpa.ConnectionRetainMode=always
 #openjpa.QueryCache=true
 #openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
