Fix breakage in abstract protocol wrt annotations.  wtf?
turn on datacache and other optimizations in the JSPs.

--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -3,9 +3,11 @@ openjpa.ConnectionDriverName=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
 openjpa.MaxFetchDepth=1
-#openjpa.FetchGroups=job.animation
-#openjpa.QueryCache=true
-#openjpa.DataCache=true
+openjpa.FetchGroups=job.animation,default
+openjpa.FlushBeforeQueries=true
+openjpa.jdbc.DriverDataSource=simple
+openjpa.ConnectionRetainMode=always
+openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
 #openjpa.Log=DefaultLevel=TRACE,SQL=TRACE
 #openjpa.jdbc.TransactionIsolation=repeatable-read
