Add struggling UI module.
Add api to job model to get active jobs in a set of states for a given
agency.

--- a/swing-ui/pom.xml
+++ b/swing-ui/pom.xml
@@ -10,4 +10,10 @@
     <artifactId>swing-ui</artifactId>
     <name>Swing UI</name>
     <description>A simple Swing GUI for Ultrastructure</description>
+    <dependencies>
+        <dependency>
+            <groupId>com.chiralbehaviors.CoRE</groupId>
+            <artifactId>animations</artifactId>
+        </dependency>
+    </dependencies>
 </project>
