--- a/pom.xml
+++ b/pom.xml
@@ -345,8 +345,8 @@
             <url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo/</url>
         </repository>
         <repository>
-            <id>hellblazer-snapshots</id>
-            <url>http://repository-hal900000.forge.cloudbees.com/snapshot//</url>
+            <id>chiralbehaviors-snapshots</id>
+            <url>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -360,7 +360,7 @@
         </pluginRepository>
         <pluginRepository>
             <id>chiralbehaviors-snapshots</id>
-            <url>http://repository-hal900000.forge.cloudbees.com/snapshot/</url>
+            <url>>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
         </pluginRepository>
         <pluginRepository>
             <id>reflections-repo</id>
