Update utils version to 0.0.4-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,7 @@
             <dependency>
                 <groupId>com.hellblazer</groupId>
                 <artifactId>utils</artifactId>
-                <version>0.0.3</version>
+                <version>0.0.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>io.dropwizard</groupId>
