clean up excess logging.  implement attributable at the existential ruleform level.  clean up attributable interface

--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -9,5 +9,6 @@ openjpa.jdbc.DriverDataSource=simple
 openjpa.ConnectionRetainMode=always
 openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
+openjpa.DynamicEnhancementAgent=false
 #openjpa.Log=DefaultLevel=TRACE,SQL=TRACE
 #openjpa.jdbc.TransactionIsolation=repeatable-read
