--- a/swing-ui/pom.xml
+++ b/swing-ui/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>jgraphx</artifactId>
             <version>3.1.0.1</version>
         </dependency> -->
+        <dependency>
+            <groupId>org.jdesktop</groupId>
+            <artifactId>beansbinding</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 </project>
