Fix loader initialization configuration parameter replacement.
D'oh.

Damn my eyes.

--- a/loader/src/main/resources/jpa.properties
+++ b/loader/src/main/resources/jpa.properties
@@ -1,6 +1,6 @@
-openjpa.ConnectionUserName=${db.login}
-openjpa.ConnectionPassword=${db.password}
-openjpa.ConnectionURL=jdbc:postgresql://${db.server}:${db.port}/${db.database}
+openjpa.ConnectionUserName=${init.db.login}
+openjpa.ConnectionPassword=${init.db.password}
+openjpa.ConnectionURL=jdbc:postgresql://${init.db.server}:${init.db.port}/${init.db.database}
 openjpa.ConnectionDriverName=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
