--- a/data-access/pom.xml
+++ b/data-access/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>CoRE.app</artifactId>
         <groupId>com.chiralbehaviors.CoRE</groupId>
-        <version>0.0.2-rc4-SNAPSHOT</version>
+        <version>0.0.2-rc4</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>data-access</artifactId>
