--- a/default-jsp-logging/pom.xml
+++ b/default-jsp-logging/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
         <artifactId>CoRE.app</artifactId>
-        <version>0.0.2-rc4-SNAPSHOT</version>
+        <version>0.0.2-rc4</version>
     </parent>
     <artifactId>default-jsp-logging</artifactId>
     <name>Default Java Stored Procedure Logging</name>
