--- a/swing-ui/pom.xml
+++ b/swing-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
         <artifactId>CoRE.app</artifactId>
-        <version>0.0.2-rc4</version>
+        <version>0.0.2-rc5-SNAPSHOT</version>
     </parent>
     <artifactId>swing-ui</artifactId>
     <name>Swing UI</name>
