Now running completely from the kernel ontology as a workspace.
Fuck yea.

--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
@@ -91,6 +92,11 @@
                 <configuration>
                     <shadedArtifactAttached>true</shadedArtifactAttached>
                     <shadedClassifierName>phat</shadedClassifierName>
+                    <artifactSet>
+                        <excludes>
+                            <exclude>org.apache.openjpa:openjpa-all</exclude>
+                        </excludes>
+                    </artifactSet>
                 </configuration>
             </plugin>
             <plugin>
@@ -129,7 +135,7 @@
         </plugins>
         <pluginManagement>
             <plugins>
-                <!--This plugin's configuration is used to store Eclipse 
+                <!--This plugin's configuration is used to store Eclipse
                     m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
@@ -245,6 +251,11 @@
                                     <groupId>com.hellblazer</groupId>
                                     <artifactId>pljava-api</artifactId>
                                     <version>0.0.1-SNAPSHOT</version>
+                                </resource>
+                                <resource>
+                                    <groupId>org.apache.openjpa</groupId>
+                                    <artifactId>openjpa-all</artifactId>
+                                    <version>2.3.0</version>
                                 </resource>
                             </excluded>
                             <classpathProperty>pljavaClassPath</classpathProperty>
