--- a/model/pom.xml
+++ b/model/pom.xml
@@ -83,17 +83,16 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.openjpa</groupId>
-            <artifactId>openjpa-all</artifactId>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa-all</artifactId>
         </dependency>
     </dependencies>
 
@@ -139,6 +138,9 @@
                         </goals>
                         <configuration>
                             <resources>
+                                <resource>
+                                    <directory>${project.build.directory}/generated-sources/jpa</directory>
+                                </resource>
                                 <resource>
                                     <directory>${project.build.directory}/generated-resources/queries</directory>
                                 </resource>
