Move kernel to animations, where it belongs.

--- a/loader/pom.xml
+++ b/loader/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>model</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.chiralbehaviors.CoRE</groupId>
+            <artifactId>animations</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
