--- a/model/pom.xml
+++ b/model/pom.xml
@@ -132,20 +132,14 @@
                     </execution>
                     <execution>
                         <id>add-resource</id>
-                        <phase>generate-sources</phase>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>add-resource</goal>
                         </goals>
                         <configuration>
                             <resources>
                                 <resource>
-                                    <directory>${project.build.directory}/generated-sources/jpa</directory>
-                                </resource>
-                                <resource>
                                     <directory>${project.build.directory}/generated-resources/queries</directory>
-                                </resource>
-                                <resource>
-                                    <directory>src/main/kernel</directory>
                                 </resource>
                             </resources>
                         </configuration>
@@ -432,35 +426,6 @@
     </build>
 
     <profiles>
-        <profile>
-            <id>generate-kernel</id>
-            <build>
-                <plugins>
-
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.3.2</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>java</goal>
-                                </goals>
-                                <phase>install</phase>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <classpathScope>test</classpathScope>
-                            <mainClass>com.chiralbehaviors.CoRE.kernel.Bootstrap</mainClass>
-                            <arguments>
-                                <argument>target/test-classes/jpa.properties</argument>
-                                <argument>src/main/kernel/kernel-workspace.json</argument>
-                            </arguments>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <id>database.active</id>
             <build>
