--- a/model/pom.xml
+++ b/model/pom.xml
@@ -132,7 +132,7 @@
                     </execution>
                     <execution>
                         <id>add-resource</id>
-                        <phase>generate-resources</phase>
+                        <phase>generate-sources</phase>
                         <goals>
                             <goal>add-resource</goal>
                         </goals>
