--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -2,12 +2,12 @@ openjpa.ConnectionURL=jdbc:default:connection
 openjpa.ConnectionDriverName=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
-openjpa.MaxFetchDepth=1
-openjpa.FetchGroups=job.animation,default
+#openjpa.MaxFetchDepth=1
+#openjpa.FetchGroups=job.animation,default
 openjpa.FlushBeforeQueries=true
 openjpa.jdbc.DriverDataSource=simple
 openjpa.ConnectionRetainMode=always
-openjpa.DataCache=true
+#openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
 openjpa.DynamicEnhancementAgent=false
 #openjpa.Log=DefaultLevel=TRACE,SQL=TRACE
