Move to version 1.0.0 in prep for release.
Fix network infererence logic.

Move openjpa default logging to ERROR to reduce the noise.

--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -10,5 +10,6 @@ openjpa.ConnectionRetainMode=always
 #openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
 openjpa.DynamicEnhancementAgent=false
+openjpa.Log=DefaultLevel=ERROR
 #openjpa.Log=DefaultLevel=TRACE,SQL=TRACE
 #openjpa.jdbc.TransactionIsolation=repeatable-read
