--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -10,4 +10,4 @@ openjpa.EntityManagerFactoryPool=true
 openjpa.ConnectionProperties=initialSize=2,maxTotal=20,maxWaitMillis=1000
 openjpa.jdbc.DriverDataSource=dbcp
 #openjpa.jdbc.TransactionIsolation=repeatable-read
-#openjpa.Log=DefaultLevel=INFO,SQL=TRACE
+openjpa.Log=DefaultLevel=ERROR
