--- a/model/src/test/resources/jpa.properties
+++ b/model/src/test/resources/jpa.properties
@@ -9,3 +9,4 @@ openjpa.RuntimeUnenhancedClasses=unsupported
 openjpa.EntityManagerFactoryPool=true
 #openjpa.jdbc.DriverDataSource=dbcp
 #openjpa.jdbc.TransactionIsolation=repeatable-read
+openjpa.Log=DefaultLevel=ERROR
