--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.chiralbehaviors.CoRE</groupId>
     <artifactId>CoRE.app</artifactId>
-    <version>0.0.2</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>Ultra Structure</name>
     <description>An implementation of Ultra Structure</description>
@@ -434,7 +434,7 @@
                 <plugin>
                     <groupId>com.chiralbehaviors.CoRE</groupId>
                     <artifactId>network-inference-generator</artifactId>
-                    <version>0.0.2</version>
+                    <version>${project.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>com.chiralbehaviors.CoRE</groupId>
