advance to version 1.0.1-SNAPSHOT

--- a/create-database/pom.xml
+++ b/create-database/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>CoRE.app</artifactId>
         <groupId>com.chiralbehaviors.CoRE</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>create-database</artifactId>
@@ -51,7 +51,7 @@
                         <plugin>
                             <groupId>org.eclipse.m2e</groupId>
                             <artifactId>lifecycle-mapping</artifactId>
-                            <version>1.0.0</version>
+                            <version>1.0.1-SNAPSHOT</version>
                             <configuration>
                                 <lifecycleMappingMetadata>
                                     <pluginExecutions>
