use standard jpa properties

--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -1,5 +1,5 @@
-openjpa.ConnectionURL=jdbc:default:connection
-openjpa.ConnectionDriverName=org.postgresql.pljava.jdbc.SPIDriver
+javax.persistence.jdbc.url=jdbc:default:connection
+javax.persistence.jdbc.driver=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
 #openjpa.MaxFetchDepth=1
