--- a/model/src/test/resources/jpa.properties
+++ b/model/src/test/resources/jpa.properties
@@ -1,7 +1,7 @@
-openjpa.ConnectionUserName=${db.login}
-openjpa.ConnectionPassword=${db.password}
-openjpa.ConnectionURL=jdbc:postgresql://${db.server}:${db.port}/${db.database}
-openjpa.ConnectionDriverName=org.postgresql.Driver
+javax.persistence.jdbc.user=${db.login}
+javax.persistence.jdbc.password=${db.password}
+javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
+javax.persistence.jdbc.driver=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
 #openjpa.QueryCache=true
