--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -2,6 +2,7 @@ javax.persistence.jdbc.url=jdbc:default:connection
 javax.persistence.jdbc.driver=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
+#openjpa.DataCache=true(ExcludedTypes=com.chiralbehaviors.event.Job)
 #openjpa.MaxFetchDepth=1
 #openjpa.FetchGroups=job.animation,default
 openjpa.FlushBeforeQueries=true
