--- a/workspace-generator/pom.xml
+++ b/workspace-generator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
         <artifactId>CoRE.app</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <artifactId>workspace-generator</artifactId>
     <packaging>maven-plugin</packaging>
