--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.chiralbehaviors.CoRE</groupId>
     <artifactId>CoRE.app</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Ultra Structure</name>
     <description>An implementation of Ultra Structure</description>
