--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,11 @@
                 <artifactId>liquibase-core</artifactId>
                 <version>3.1.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-runtime</artifactId>
+                <version>4.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -373,6 +378,11 @@
         </plugins>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.antlr</groupId>
+                    <artifactId>antlr4-maven-plugin</artifactId>
+                    <version>4.3</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
