fix antlr tool version issues

--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -27,6 +27,13 @@
         <sourceDirectory>${project.build.directory}/target/generated-sources/antlr4</sourceDirectory>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>false</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <executions>
