far better structure for parse tree.

--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.chiralbehaviors.CoRE</groupId>
+            <artifactId>animations</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
