--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <core.java.password>password</core.java.password>
 
         <testing.db.database>postgres</testing.db.database>
-        <testing.db.server>localhost</testing.db.server>
+        <testing.db.server>127.0.0.1</testing.db.server>
         <testing.db.port>5432</testing.db.port>
         <testing.db.login>postgres</testing.db.login>
         <testing.db.password>postgres</testing.db.password>
