--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -1,6 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
@@ -32,10 +31,13 @@
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
-        <sourceDirectory>${project.build.directory}/target/generated-sources/antlr4</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -52,16 +54,15 @@
                         <id>add-resource</id>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>add-resource</goal>
+                            <goal>add-source</goal>
                         </goals>
                         <configuration>
-                            <resources>
-                                <resource>
-                                    <directory>src/main/antl4</directory>
-                                </resource>
-                            </resources>
+                            <sources>
+                                <source>${project.build.directory}/target/generated-sources/antlr4</source>
+                            </sources>
                         </configuration>
                     </execution>
+
                 </executions>
             </plugin>
             <plugin>
