Deal with caching semantics.  Don't ever share kernels across em's  - heh.

--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -3,9 +3,9 @@ javax.persistence.jdbc.password=${db.password}
 javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 javax.persistence.jdbc.driver=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
-#openjpa.RuntimeUnenhancedClasses=unsupported
+openjpa.RuntimeUnenhancedClasses=unsupported
 openjpa.ConnectionRetainMode=always 
-#openjpa.DataCache=true
+openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
 openjpa.ConnectionProperties=initialSize=2,maxTotal=20,maxWaitMillis=1000
 openjpa.jdbc.DriverDataSource=dbcp
