--- a/model/src/test/resources/jpa.properties
+++ b/model/src/test/resources/jpa.properties
@@ -5,7 +5,7 @@ javax.persistence.jdbc.driver=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.RuntimeUnenhancedClasses=unsupported
 #openjpa.QueryCache=true
-#openjpa.DataCache=true
+openjpa.DataCache=true
 openjpa.EntityManagerFactoryPool=true
 #openjpa.jdbc.DriverDataSource=dbcp
 #openjpa.jdbc.TransactionIsolation=repeatable-read
