--- a/pom.xml
+++ b/pom.xml
@@ -75,15 +75,14 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.18.1-GA</version>
+            </dependency>
+            <dependency>
                 <groupId>org.reflections</groupId>
-                <artifactId>reflections</artifactId>
-                <version>0.9.5</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>guava</artifactId>
-                        <groupId>com.google.guava</groupId>
-                    </exclusion>
-                </exclusions>
+                <artifactId>reflections-maven</artifactId>
+                <version>0.9.8</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
