--- a/model/pom.xml
+++ b/model/pom.xml
@@ -109,12 +109,12 @@
                         </goals>
                         <phase>generate-sources</phase>
                         <configuration>
-                            <options>
-                                <openjpa.metamodel>TRUE</openjpa.metamodel>
-                            </options>
+                            <optionMap>
+                                <addSuppressWarningsAnnotation>true</addSuppressWarningsAnnotation>
+                            </optionMap>
                             <processors>
                                 <!-- list of processors to use -->
-                                <processor>org.apache.openjpa.persistence.meta.AnnotationProcessor6</processor>
+                                <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
                             </processors>
                             <outputDirectory>${project.build.directory}/generated-sources/jpa</outputDirectory>
                         </configuration>
@@ -122,11 +122,12 @@
                 </executions>
                 <dependencies>
                     <dependency>
-                        <groupId>org.apache.openjpa</groupId>
-                        <artifactId>openjpa-all</artifactId>
-                        <version>2.3.0</version>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-jpamodelgen</artifactId>
+                        <version>4.3.8.Final</version>
                     </dependency>
                 </dependencies>
+
             </plugin>
             <plugin>
                 <groupId>com.chiralbehaviors.CoRE</groupId>
