--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -69,6 +69,10 @@
             <groupId>com.hellblazer</groupId>
             <artifactId>utils</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate4</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
